--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <title>Mapa Interativo - Ambev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet.heat/dist/leaflet-heat.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    
     <style>
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen;
+        }
         #map { height: 90vh; width: 100%; }
+
         .filtros {
             position: absolute;
             top: 10px;
@@ -19,53 +22,67 @@
             z-index: 1000;
             display: flex;
             flex-direction: column;
-            gap: 6px;
-            background-color: transparent;
+            gap: 8px;
         }
+
         .filtros select {
-            font-size: 11px;
+            font-size: 14px;
             width: 170px;
+            border-radius: 12px;
+            border: 1px solid #ccc;
+            padding: 6px 10px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+            background-color: #f7f7f7;
         }
-        .leaflet-control-zoom {
-            margin-top: 220px;
+
+        .choices__inner {
+            border-radius: 12px !important;
+            background-color: #f7f7f7 !important;
+            font-size: 13px;
+            min-height: 36px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.15) !important;
         }
+
+        .choices[data-type*=select-multiple] .choices__button {
+            font-size: 10px;
+        }
+
         #legenda {
             position: absolute;
             bottom: 10px;
             left: 10px;
             background-color: white;
-            padding: 8px;
-            border-radius: 8px;
-            font-size: 12px;
-        }
-        #btnHeatmap {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 1000;
-            padding: 6px 12px;
-            font-size: 12px;
-            border-radius: 5px;
+            padding: 8px 12px;
+            border-radius: 10px;
+            font-size: 13px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.15);
         }
     </style>
 </head>
 <body>
     <div class="filtros">
         <select id="filtroCDD" multiple></select>
-        <select id="filtroDia" multiple></select>
-        <select id="filtroCamada" multiple></select>
-        <select id="filtroInplant" multiple></select>
         <select id="filtroGN" multiple></select>
+        <select id="filtroInplant" multiple></select>
         <select id="filtroRede" multiple></select>
+        <select id="filtroDia" multiple></select>
     </div>
-    <button id="btnHeatmap">Ativar Heatmap</button>
     <div id="map"></div>
     <div id="legenda">
         <b>Legenda:</b><br>
-        Total: Azul<br>
         Agenda: Verde<br>
-        Dia de Rota: Laranja
+        Segunda: Vermelho<br>
+        Terça: Laranja<br>
+        Quarta: Amarelo<br>
+        Quinta: Roxo<br>
+        Sexta: Preto<br>
+        Sábado: Cinza<br>
+        Total: Azul
     </div>
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
     <script>
         const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
@@ -73,16 +90,13 @@
         const map = L.map('map').setView([-15.7797, -47.9297], 5);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
         const grupoMarcadores = L.layerGroup().addTo(map);
-        let heatLayer;
-        let heatmapAtivo = false;
 
         const filtros = {
-            CDD: new Choices('#filtroCDD', { removeItemButton: true }),
-            Dia: new Choices('#filtroDia', { removeItemButton: true }),
-            'Tipo de Camada': new Choices('#filtroCamada', { removeItemButton: true }),
-            Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
-            GN: new Choices('#filtroGN', { removeItemButton: true }),
-            Rede: new Choices('#filtroRede', { removeItemButton: true })
+            CDD: new Choices('#filtroCDD', { removeItemButton: true, placeholderValue: 'Escolha o CDD' }),
+            GN: new Choices('#filtroGN', { removeItemButton: true, placeholderValue: 'Filtrar por GN' }),
+            Inplant: new Choices('#filtroInplant', { removeItemButton: true, placeholderValue: 'Filtrar por Inplant' }),
+            Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
+            Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
         };
 
         const coresPorDia = {
@@ -97,70 +111,71 @@
         };
 
         function preencherFiltros(dados, chave, controle) {
-            const valoresUnicos = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
+            const valores = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
             controle.clearChoices();
-            controle.setChoices(valoresUnicos.map(v => ({ value: v, label: v })), 'value', 'label', true);
+            controle.setChoices(valores.map(v => ({ value: v, label: v })), 'value', 'label', true);
         }
 
         function atualizarMapa(dados) {
             grupoMarcadores.clearLayers();
-            if (heatLayer) map.removeLayer(heatLayer);
 
             const cdd = filtros.CDD.getValue(true);
-            const diasSelecionados = filtros.Dia.getValue(true);
-            const camada = filtros['Tipo de Camada'].getValue(true);
-            const inplant = filtros.Inplant.getValue(true);
             const gn = filtros.GN.getValue(true);
+            const inplant = filtros.Inplant.getValue(true);
             const rede = filtros.Rede.getValue(true);
-
-            const pontosHeat = [];
+            const diasSelecionados = filtros.Dia.getValue(true);
 
             dados.forEach(d => {
-                let agenda = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'].every(dia => d[dia] === '1');
+                const lat = parseFloat(d['LAT']);
+                const lon = parseFloat(d['LONG']);
+                if (isNaN(lat) || isNaN(lon)) return;
 
-                const diaValido = diasSelecionados.length === 0 ||
-                    (diasSelecionados.includes('Agenda') && agenda) ||
-                    diasSelecionados.some(ds => d[ds] === '1');
                 const cddValido = cdd.length === 0 || cdd.includes(d['CDD']);
-                const camadaValida = camada.length === 0 || camada.includes(d['Tipo de Camada']);
-                const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
                 const gnValido = gn.length === 0 || gn.includes(d['GN']);
-                const redeValida = rede.length === 0 || rede.includes(d['Rede']);
+                const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
+                const redeValido = rede.length === 0 || rede.includes(d['Rede']);
 
-                if (diaValido && cddValido && camadaValida && inplantValido && gnValido && redeValida) {
-                    const lat = parseFloat(d.LAT);
-                    const lon = parseFloat(d.LONG);
+                let diaValido = false;
+                let cor = 'blue';
 
-                    if (!isNaN(lat) && !isNaN(lon)) {
-                        let cor = 'blue';
-                        if (diasSelecionados.includes('Agenda') && agenda) {
-                            cor = coresPorDia['Agenda'];
-                        } else {
-                            for (let dia of diasSelecionados) {
-                                if (d[dia] === '1' && coresPorDia[dia]) {
-                                    cor = coresPorDia[dia];
-                                    break;
-                                }
-                            }
+                if (diasSelecionados.length === 0) {
+                    const dias = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'];
+                    for (let dia of dias) {
+                        if (d[dia]?.trim() === '1') {
+                            cor = coresPorDia[dia];
+                            diaValido = true;
+                            break;
                         }
+                    }
+                } else {
+                    for (let dia of diasSelecionados) {
+                        if (d[dia]?.trim() === '1') {
+                            cor = coresPorDia[dia];
+                            diaValido = true;
+                            break;
+                        }
+                    }
 
-                        const marcador = L.circleMarker([lat, lon], {
-                            radius: 6,
-                            color: cor,
-                            fillColor: cor,
-                            fillOpacity: 0.8,
-                            weight: 2
-                        }).bindPopup(`<b>${d['Nome']}</b><br>Inplant: ${d['Inplant']}<br>CDD: ${d['CDD']}`);
-
-                        grupoMarcadores.addLayer(marcador);
-                        pontosHeat.push([lat, lon, 1]);
+                    if (!diaValido && diasSelecionados.includes('Agenda')) {
+                        const isAgenda = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'].every(dia => d[dia]?.trim() === '1');
+                        if (isAgenda) {
+                            diaValido = true;
+                            cor = coresPorDia['Agenda'];
+                        }
                     }
                 }
-            });
 
-            if (heatmapAtivo) {
-                heatLayer = L.heatLayer(pontosHeat, { radius: 25 }).addTo(map);
-            }
+                if (cddValido && gnValido && inplantValido && redeValido && diaValido) {
+                    const marker = L.circleMarker([lat, lon], {
+                        radius: 6,
+                        color: cor,
+                        fillColor: cor,
+                        fillOpacity: 0.8,
+                        weight: 1
+                    }).bindPopup(`<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
+                    grupoMarcadores.addLayer(marker);
+                }
+            });
         }
 
         Papa.parse(url, {
@@ -170,30 +185,19 @@
                 const dados = results.data;
 
                 preencherFiltros(dados, 'CDD', filtros.CDD);
-                preencherFiltros(dados, 'Tipo de Camada', filtros['Tipo de Camada']);
-                preencherFiltros(dados, 'Inplant', filtros.Inplant);
                 preencherFiltros(dados, 'GN', filtros.GN);
+                preencherFiltros(dados, 'Inplant', filtros.Inplant);
                 preencherFiltros(dados, 'Rede', filtros.Rede);
 
-                const diasSemana = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado', 'Agenda'];
+                const diasSemana = ['Agenda','Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
                 filtros.Dia.clearChoices();
-                filtros.Dia.setChoices(diasSemana.map(v => ({ value: v, label: v })), 'value', 'label', true);
+                filtros.Dia.setChoices(diasSemana.map(d => ({ value: d, label: d })), 'value', 'label', true);
 
                 atualizarMapa(dados);
                 Object.values(filtros).forEach(f => {
                     f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
                 });
             }
-        });
-
-        document.getElementById('btnHeatmap').addEventListener('click', () => {
-            heatmapAtivo = !heatmapAtivo;
-            document.getElementById('btnHeatmap').textContent = heatmapAtivo ? 'Desativar Heatmap' : 'Ativar Heatmap';
-            Papa.parse(url, {
-                download: true,
-                header: true,
-                complete: results => atualizarMapa(results.data)
-            });
         });
     </script>
 </body>
